# MercuryKV

./: .clang-format  .env  .gitignore  README.md  TODO.md  ba-dev.sh  db.sql  docker-compose.yml  fr-dev.sh  install.md  makefile  me-dev.sh  nginx.conf  nginx.dev.conf  package-lock.json  script.sh
backend/: CMakeLists.txt  config.json  config.json.bak  config.yaml  main.cc
backend/.cache/clangd/index/: AddData.cc.7C1246A209109403.idx  Alter.cc.AADCC4ABD298CF42.idx  Alter.h.4BB6BC082A2E8FFD.idx  ApiKeys.cc.3E48D3EBB081E274.idx  ApiKeys.h.BEBC5B6E9A32FDC3.idx  DeleteData.cc.4774EE4DF39B17C4.idx  FetchData.cc.70FDAA25E5ED5DD8.idx  FetchData.h.B6CBBCDC3F474A8A.idx  KvStore.cc.D93B3BA9601D6D71.idx  KvStore.h.6A70041E6BB89BC7.idx  KvTagAssociation.cc.2FE2EE09C99CEF91.idx  KvTagAssociation.h.5D2656E329E97FA8.idx  Login.cc.DA5A2F5FF4E8D241.idx  Login.h.70A4E21C3D8A1A6D.idx  MyCrypt.hpp.09E71C86760F7E36.idx  MyJWT.hpp.DC9422C81C569F46.idx  MyLog.hpp.98CF336B765C0922.idx  Register.cc.F5ED90B01F0B1850.idx  Register.h.1C58DAF508F66318.idx  Tags.cc.3A0CA191858AE66F.idx  Tags.h.910B142A65748B61.idx  Users.cc.65E94F22CE15B0F7.idx  Users.cc.9E90AF11A48E9345.idx  Users.h.189C17619C9FBD52.idx  Users.h.EA8CF8B3291DDB40.idx  main.cc.099A806C70FF5649.idx
backend/common/: MyCrypt.hpp  MyJWT.hpp  MyLog.hpp
backend/controllers/AlterApi/: AddData.cc  Alter.cc  Alter.h  DeleteData.cc  UpdateData.cc
backend/controllers/FetchDataApi/: FetchData.cc  FetchData.h
backend/controllers/LoginApi/: Login.cc  Login.h
backend/controllers/RegisterApi/: Register.cc  Register.h
backend/models/: Users.cc  Users.h  model.json
backend/models/ApiKey/: ApiKeys.cc  ApiKeys.h
backend/models/KVStore/: KvStore.cc  KvStore.h  model.json
backend/models/KV_Tag/: KvTagAssociation.cc  KvTagAssociation.h  model.json
backend/models/Tags/: Tags.cc  Tags.h  model.json
backend/public/: index.html
backend/public/assets/: About-3xusleC-.js  About-BC7OIUmx.js  About-BIOPsH15.js  About-BYjUfYfL.js  About-BhuGpWdO.js  About-BqN-52SV.js  About-C1_ORMc9.js  About-C47B5nDq.js  About-Ceaxtb6y.js  About-CfyxnzJO.js  About-DOUjuvkw.js  About-DV_LnZfE.js  About-dDsi2at7.js  About-kvjHHBOJ.css  Index-5UvJMQn8.js  Index-B65b617K.js  Index-B8oHq0c9.css  Index-B92vf8Em.js  Index-BI39_x2P.js  Index-BnGe0MsR.css  Index-Cdn_8XCx.js  Index-CkF_LI3R.js  Index-D7TTTHEY.css  Index-DB0Vl7Td.js  Index-DMlhcRCu.js  Index-DcJQGVmi.js  Index-E5ROsTNh.js  Index-GKuVxfNb.css  Index-OHOBzNTn.js  Index-m7zDAHUB.js  Index-n_3ETTWD.js  Index-x79XINJX.css  Mercury-6HZLrOyv.css  Mercury-BIemfq4h.js  Mercury-Bb-TMSih.css  Mercury-Bd9MOlNs.js  Mercury-BiuhxGOn.css  Mercury-BsRx6h0q.css  Mercury-BvYOQLkc.js  Mercury-BwH4OjpO.css  (+52 more)
frontend/: .gitignore  package-lock.json
frontend/src/: App.vue  main.js
mercury/: Dockerfile  config.json
test/: makefile  run  test.cc
(+32 files in other folders)
